2008-12-23 Richard Dale <richard.j.dale@gmail.com>
* Added an implementation of stateless slots. Example usage:

    implementStateless(:showIcon1, :undoShowIcon1)

2008-12-19 Richard Dale <richard.j.dale@gmail.com>
* When the construct_copy() function was used to copy an instance, it wasn't
initializing the binding for the new instance. This caused a crash when the
destructor for the instance tried to make a callback withthe null binding. 
* Added a std::vector<Wt::WStandardItem*> marshaller
* If a set method setXXX() already existed for an instance variable XXX, then
the type of the variable wasn't being registered, and smoke code generation 
failed

2008-12-18 Richard Dale <richard.j.dale@gmail.com>
* Added Ruby 1.9 compatible RSTRING handling
* Update the wt_header_list with the Wt 2.2.2 headers and tweak the smoke lib
code generation for the smoke lib to work
* However, the Wt::WPopupMenu header is missing a Wt/WApplication include

2008-12-14 Richard Dale <richard.j.dale@gmail.com>
* Added Wt::WModelIndex.internalPointer() and 
Wt::WAbstractItemModel.createIndex() methods

2008-12-12 Richard Dale <richard.j.dale@gmail.com>
* Updated the smoke.h header with improved binary chop code